# RustyB

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md
.cargo/: config.toml
binaries/linux/: rusty-browser-webview-linux
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: candle_backend.rs  embeddings.rs  features.rs  lib.rs  llm.rs  rag.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: lib.rs  navigation.rs  session.rs  tab.rs  webview.rs  window.rs
crates/browser-core/src/navigation/: history.rs  mod.rs  session.rs
crates/browser-ui/: Cargo.toml  build.rs
crates/browser-ui/examples/: hot_reload_demo.rs
crates/browser-ui/src/: app.rs  embedded_webview.rs  event_loop_waker.rs  gpu_renderer.rs  hot_reload.rs  hybrid_app.rs  input_system.rs  integrated_app.rs  lib.rs  main.rs  servo_integration.rs  servo_renderer.rs  single_window_app.rs  theme.rs  two_window_app.rs  webview_direct.rs  webview_ipc.rs  webview_widget.rs  webview_wry.rs  window_manager.rs
crates/browser-ui/src/control_panel/: mod.rs  sidebar.rs
crates/browser-ui/src/control_panel/panels/: ai_panel.rs  automation_panel.rs  devtools_panel.rs  extraction_panel.rs  mod.rs  network_panel.rs  settings_panel.rs
crates/browser-ui/src/control_panel/tools/: ai.rs  automation.rs  extraction.rs  mod.rs  network.rs
crates/browser-ui/src/views/: address_bar.rs  mod.rs  tab_bar.rs  toolbar.rs
crates/browser-ui/src/widgets/: mod.rs
crates/network-layer/: Cargo.toml
crates/network-layer/src/: filter.rs  interceptor.rs  lib.rs  logger.rs  mitm.rs  proxy.rs
crates/network-layer/src/dns/: hickory_resolver.rs  mod.rs
crates/network-layer/src/interceptor/: adblock.rs  mod.rs  privacy.rs
crates/network-layer/src/proxy/: ca.rs  mitm_proxy.rs  mod.rs  tls.rs
crates/network-layer/src/tls/: cert_generator.rs  interceptor.rs  mod.rs
crates/remote-api/: Cargo.toml
crates/remote-api/src/: commands.rs  lib.rs  rest.rs  websocket.rs
crates/remote-api/src/automation/: engine.rs  mod.rs  scripts.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  types.rs  utils.rs
crates/web-to-api/: Cargo.toml
crates/web-to-api/src/: api_server.rs  cache.rs  extractor.rs  lib.rs  schema.rs
crates/webview-subprocess/: Cargo.toml  build.rs
crates/webview-subprocess/src/: main.rs
docs/: BROWSER_ARCHITECTURE.md  BROWSER_ENGINE_RESEARCH.md  CONTROL_PANEL.md
linux/: README.md  build.sh  config.toml
