[workspace]
members = [
    "crates/browser-core",
    "crates/browser-ui",
    "crates/network-layer",
    "crates/web-to-api",
    "crates/ai-engine",
    "crates/remote-api",
    "crates/shared",
    "crates/webview-subprocess",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shiv <shivmunot9@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iceyxsm/rusty-browser"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP & Networking
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"] }
reqwest-middleware = "0.4"
hyper = { version = "1.5", features = ["full"] }
hyper-util = "0.1"
http = "1.2"
http-body-util = "0.1"

tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }

# TLS - using ring instead of aws-lc for faster builds
rustls = { version = "0.23", features = ["ring"], default-features = false }
tokio-rustls = "0.26"
rcgen = { version = "0.14", features = ["pem", "x509-parser", "ring"] }

# WebSocket
tokio-tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"

# HTML Parsing
scraper = "0.25"
html5ever = "0.29"
selectors = "0.25"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
regex = "1.11"
once_cell = "1.20"
dashmap = "6.1"
parking_lot = "0.12"
dirs = "6"
url = "2"

# AI/ML
candle-core = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"

# UI (Iced)
iced = { version = "0.14", features = ["wgpu", "tokio", "debug", "advanced", "image"] }
iced_aw = { version = "0.13", features = ["tabs", "menu"] }

# Window handling
raw-window-handle = "0.6"

# Storage
sled = "0.34"
redb = "2"

# Async traits
async-trait = "0.1"

# WebView for Iced (iced_webview_v2 with CEF backend - full browser support)
# NOTE: First build downloads ~300MB CEF binaries and takes 10-20 minutes
iced_webview_v2 = { version = "0.1", features = ["cef"] }

# Dev dependencies
tokio-test = "0.4"

# Internal crates (path dependencies)
shared = { path = "crates/shared" }
browser-core = { path = "crates/browser-core" }
network-layer = { path = "crates/network-layer" }
web-to-api = { path = "crates/web-to-api" }
ai-engine = { path = "crates/ai-engine" }
remote-api = { path = "crates/remote-api" }

# ============================================
# Memory-Optimized Build Profiles (Max 10GB)
# ============================================

[profile.dev]
# Fast compilation, minimal memory
opt-level = 0
debug = true
codegen-units = 256
incremental = true

[profile.release]
# Memory-efficient release build
opt-level = 1
debug = false
codegen-units = 256
lto = false
panic = "abort"
strip = true

# Per-crate memory limits for heavy crates
[profile.release.package.wgpu]
codegen-units = 128

[profile.release.package.wgpu-core]
codegen-units = 128

[profile.release.package.naga]
codegen-units = 128

[profile.release.package.candle-transformers]
codegen-units = 128

[profile.release.package.candle-core]
codegen-units = 128

[profile.release.package.swash]
codegen-units = 64

[profile.release.package.skrifa]
codegen-units = 64
