[package]
name = "browser-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rusty-browser"
path = "src/main.rs"

[dependencies]
shared.workspace = true
browser-core.workspace = true
network-layer.workspace = true
web-to-api.workspace = true
ai-engine.workspace = true
remote-api.workspace = true

# UI
iced.workspace = true
iced_aw.workspace = true

# GPU Rendering
wgpu = { version = "23", features = ["vulkan-portability", "metal"] }
crossbeam-channel = "0.5"
pollster = "0.4"

# WebView Integration (WRY - Production Grade)
wry = { workspace = true }
tao = { workspace = true }

# Servo/Surfman (for GL context management)
surfman = { version = "0.9", optional = true }

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
dirs.workspace = true

# HTTP
reqwest.workspace = true

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# metal = { version = "0.29", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.58", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi"], optional = true }

[features]
default = ["system-theme-detection", "surfman"]
metal-support = []  # "metal"
dx11-support = []   # "windows"
system-theme-detection = []

[dev-dependencies]
tokio-test.workspace = true
