[package]
name = "network-layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true

# HTTP
reqwest.workspace = true
reqwest-middleware.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true

# TLS
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true

# WebSocket
tokio-tungstenite.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
base64.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
