[package]
name = "network-layer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true

# HTTP
reqwest.workspace = true
reqwest-middleware.workspace = true
http.workspace = true
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full", "http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
tower.workspace = true

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-native-certs = "0.8"
tokio-rustls.workspace = true
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
x509-parser = "0.16"

# DNS Resolution - Hickory DNS 2025-2026
hickory-resolver = "0.25"

# HTTP/3 and QUIC (disabled due to version compatibility)
# quinn = { version = "0.11", features = ["runtime-tokio", "ring"] }
# h3 = "0.0.8"
# h3-quinn = "0.0.10"

# WebSocket
tokio-tungstenite.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
base64.workspace = true
regex.workspace = true
url.workspace = true
bytes = "1.5"

# Caching for certificates and DNS
moka = { version = "0.12", features = ["future"] }

# IP network handling
ipnet = "2.9"

# Ad blocking filter parsing
addr = "0.15"
once_cell.workspace = true

[dev-dependencies]
tokio-test.workspace = true
hyper = { version = "1.5", features = ["full"] }
