[package]
name = "web-to-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
network-layer.workspace = true

# HTTP
reqwest.workspace = true
axum.workspace = true
tower.workspace = true

# HTML Parsing
scraper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
