[package]
name = "rusty-browser-webview"
version = "0.1.0"
edition = "2024"
authors = ["Rusty Browser Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rusty-browser"
description = "WebView subprocess for Rusty Browser - renders web content via IPC"

[[bin]]
name = "rusty-browser-webview"
path = "src/main.rs"

[dependencies]
# WebView - tao for window, wry for WebView
tao = "0.32"
wry = { version = "0.50", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async - not needed for subprocess, using std channels
# tokio = { version = "1.43", features = ["rt-multi-thread", "io-std", "io-util", "sync", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry"] }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Diagnostics_Etw"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
